--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ header {
     background-color: #183D3D;
 }
 
+.buttonNavbar {
+    color: white;
+}
+
 header nav ul li .anclaNavbar {
     background-color: whitesmoke;
     font-family: 'Hind Madurai', sans-serif;
@@ -27,8 +31,9 @@ main .encabezado {
     align-items:flex-start;
     justify-content: space-around;
     width: 100%;
-    height: 800px;
+    height: auto;
     background-size: cover;
+    object-fit: cover;
     opacity: .9;
 }
 
@@ -145,13 +150,21 @@ main .encabezado .textoPrincipalWeb {
         margin-left: auto;
         align-items: center;
     }
-    main .sesion-coach {
-        width: 60%;
-        height: auto;
+    main .sesionCoach {
+        /*width: 60%;
+        height: auto;*/
         font-family: 'Noto Sans', sans-serif;
         font-size: 400;
         text-align: justify;
         padding-bottom: 15px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .agendaSesionCoach {
+        margin-left: 20px;
+        margin-right: 20px;
+        text-align: center;
     }
 
 .cards-container {
@@ -209,3 +222,25 @@ main .encabezado .textoPrincipalWeb {
     padding-right: 20px;
     text-align: justify;
 }
+
+@media (max-width: 768px) {
+    main .encabezado {
+        background-image: none;
+        background-color:#050404;
+        align-content: center;
+    }
+
+    main .encabezado .textoPrincipalWeb {
+        width: auto;
+        padding: 15px;
+        text-align: center;
+    }
+
+    .presentacionLucas {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+
